Add cors controller
